Extensions in json